// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate gql possible types web from the GraphQL Schema when there are *no* union types 1`] = `
"export interface PossibleTypesResultData {
  possibleTypes: {
    [key: string]: string[]
  }
}
const result: PossibleTypesResultData = {
  possibleTypes: {},
}
export default result
"
`;

exports[`Generate gql possible types web from the GraphQL Schema when there are union types  1`] = `
"export interface PossibleTypesResultData {
  possibleTypes: {
    [key: string]: string[]
  }
}
const result: PossibleTypesResultData = {
  possibleTypes: {
    Groceries: ['Fruit', 'Vegetable'],
    Grocery: ['Fruit', 'Vegetable'],
  },
}
export default result
"
`;
